plugin_docs/news/1.1.1/API.md
# 新闻资讯插件 API 文档

## 1. 文档信息

| 项目 | 内容 |
| --- | --- |
| 插件 ID | `news` |
| 插件版本 | `1.1.1` |
| 核心版本 | `0.0.2` |
| 文档更新时间 | `2026-09-24` |
| 管理端前缀 | `/admin/plugin/news` |
| 用户端前缀 | `/api/plugin/news` |

当前版本没有第三方回调接口，也没有需要用户登录的用户端私有接口。

## 2. 通用约定

### 2.1 统一响应

成功响应：

```json
{
  "code": 0,
  "msg": "success",
  "data": {}
}
```

失败响应：

```json
{
  "code": 400,
  "msg": "参数错误"
}
```

| code | 说明 |
| --- | --- |
| `0` | 成功 |
| `400` | 参数绑定或校验失败 |
| `401` | 未登录或登录已失效 |
| `403` | 没有接口权限 |
| `500` | 业务处理失败 |
| `503` | 权限或依赖服务暂时不可用 |

除认证和权限等 HTTP 错误外，业务错误通常仍返回 HTTP 200，应以响应中的 `code` 判断结果。

### 2.2 管理端认证与权限

管理端接口全部注册到 `Permission` 路由组，请求头必须携带：

```http
Authorization: Bearer <access-token>
Content-Type: application/json
```

角色还必须拥有与请求方法及完整路径一致的菜单接口权限。写接口会进入宿主操作日志链路。

### 2.3 分页与时间

- `page` 默认 `1`；
- `page_size` 默认 `20`，最大 `100`；
- 时间使用宿主 JSON 时间格式，管理端展示到秒；
- 文件字段中的 `cover` 是数据库相对路径，`cover_url` 是根据当前存储配置动态补全的访问地址。

## 3. 数据结构

### 3.1 分类对象 CategoryItem

| 字段 | 类型 | 说明 |
| --- | --- | --- |
| `id` | integer | 分类 ID |
| `name` | string | 分类名称，最长 64 字符 |
| `slug` | string | 唯一分类标识，最长 64 字符 |
| `sort` | integer | 排序值，越大越靠前 |
| `status` | integer | `1` 启用，`2` 停用 |
| `remark` | string | 分类备注 |
| `created_at` | string | 创建时间 |
| `updated_at` | string | 更新时间 |

### 3.2 文章对象 ArticleItem

| 字段 | 类型 | 说明 |
| --- | --- | --- |
| `id` | integer | 文章 ID |
| `category_id` | integer | 分类 ID |
| `category` | object | 关联分类，包含 `id`、`name`、`slug` |
| `title` | string | 文章标题，最长 200 字符 |
| `slug` | string | 唯一文章标识，最长 128 字符 |
| `summary` | string | 文章摘要，最长 500 字符 |
| `cover` | string | 封面相对路径 |
| `cover_url` | string | 封面完整访问地址 |
| `content` | string | 文章正文；管理端和详情接口返回，用户端列表省略 |
| `status` | integer | `1` 草稿，`2` 已发布，`3` 已下线 |
| `enable_status` | integer | `1` 启用，`2` 禁用；禁用文章不对用户端开放 |
| `sort` | integer | 排序值，越大越靠前 |
| `view_count` | integer | 真实浏览次数 |
| `virtual_view_count` | integer | 后台配置的虚拟浏览次数 |
| `total_view_count` | integer | 展示浏览次数，为真实与虚拟数量之和 |
| `published_at` | string/null | 最近发布时间 |
| `created_at` | string | 创建时间，仅管理端返回 |
| `updated_at` | string | 更新时间，仅管理端返回 |

## 4. 管理端分类接口

### 4.1 分类列表

`GET /admin/plugin/news/category/list`

| Query 参数 | 类型 | 必填 | 说明 |
| --- | --- | --- | --- |
| `keyword` | string | 否 | 匹配分类名称或标识，最长 64 字符 |
| `status` | integer | 否 | `1` 启用，`2` 停用 |
| `page` | integer | 否 | 页码 |
| `page_size` | integer | 否 | 每页数量，最大 100 |

`data` 为 `{ "list": CategoryItem[], "total": integer }`。

### 4.2 保存分类

`POST /admin/plugin/news/category/save`

新增时 `id` 传 `0`，修改时传现有分类 ID。管理端新增页面会自动生成标识，保存前允许修改；分类创建后 `slug` 不可变，修改请求中的该字段不会覆盖数据库原值。

```json
{
  "id": 0,
  "name": "公司新闻",
  "slug": "company",
  "sort": 100,
  "status": 1,
  "remark": "公司动态与公告"
}
```

成功时 `data` 返回完整 `CategoryItem`。`slug` 受数据库唯一索引保护，并发提交相同标识只会有一个请求成功。

常见失败：分类标识已存在、修改对象不存在、字段不符合长度或枚举约束。

### 4.3 删除分类

`POST /admin/plugin/news/category/delete`

```json
{ "id": 12 }
```

成功时 `data` 为 `null`。该接口在事务中检查文章引用；分类下存在未删除文章时拒绝删除。重复删除返回“分类不存在”，不作为幂等成功处理。

## 5. 管理端文章接口

### 5.1 文章列表

`GET /admin/plugin/news/article/list`

| Query 参数 | 类型 | 必填 | 说明 |
| --- | --- | --- | --- |
| `keyword` | string | 否 | 匹配标题或文章标识，最长 200 字符 |
| `category_id` | integer | 否 | 分类 ID |
| `status` | integer | 否 | `1` 草稿，`2` 已发布，`3` 已下线 |
| `enable_status` | integer | 否 | `1` 启用，`2` 禁用 |
| `page` | integer | 否 | 页码 |
| `page_size` | integer | 否 | 每页数量，最大 100 |

`data` 为 `{ "list": ArticleItem[], "total": integer }`，分类通过预加载返回。

### 5.2 文章详情

`GET /admin/plugin/news/article/detail?id=100`

| Query 参数 | 类型 | 必填 | 说明 |
| --- | --- | --- | --- |
| `id` | integer | 是 | 文章 ID |

成功时 `data` 返回完整 `ArticleItem`，包括正文和关联分类。

### 5.3 保存文章

`POST /admin/plugin/news/article/save`

新增文章始终保存为草稿；修改文章不会隐式改变当前发布状态。管理端新增页面会自动生成标识，保存前允许修改；文章创建后 `slug` 不可变，修改请求中的该字段不会覆盖数据库原值。封面可以提交上传接口返回的相对路径或当前存储域名下的完整地址，后端统一转换为相对路径保存。

```json
{
  "id": 0,
  "category_id": 12,
  "title": "新闻插件正式发布",
  "slug": "news-plugin-release",
  "summary": "新闻资讯插件 1.0.0 发布说明",
  "cover": "uploads/2026/09/news-cover.webp",
  "content": "<p>正文内容</p>",
  "enable_status": 1,
  "virtual_view_count": 100,
  "sort": 100
}
```

成功时 `data` 返回完整 `ArticleItem`。`slug` 受数据库唯一索引保护。正文允许保存 HTML，面向最终用户渲染时，客户端必须采用可信内容策略，不能把未经授权用户提交的内容直接作为 HTML 执行。

### 5.4 发布或下线文章

`POST /admin/plugin/news/article/status`

```json
{
  "id": 100,
  "status": 2
}
```

`status` 只允许：

- `2`：发布，同时将 `published_at` 更新为当前时间；
- `3`：下线，保留原发布时间。

重复发布会刷新发布时间，重复下线保持下线状态。调用方需要避免无意义重复请求。

### 5.5 删除文章

`POST /admin/plugin/news/article/delete`

```json
{ "id": 100 }
```

执行软删除，不会物理移除数据库记录和已上传封面。重复删除返回“文章不存在”。

## 6. 用户端公开接口

公开接口无需 Token。调用方应在网关层结合部署规模设置限流；插件分页最大为 100 条，禁止通过大分页一次性抓取全部文章。

### 6.1 启用分类列表

`GET /api/plugin/news/categories`

返回启用分类数组：

```json
{
  "code": 0,
  "msg": "success",
  "data": [
    { "id": 12, "name": "公司新闻", "slug": "company" }
  ]
}
```

### 6.2 已发布文章列表

`GET /api/plugin/news/articles`

| Query 参数 | 类型 | 必填 | 说明 |
| --- | --- | --- | --- |
| `category_slug` | string | 否 | 启用分类的稳定标识 |
| `keyword` | string | 否 | 标题关键字，最长 100 字符 |
| `page` | integer | 否 | 页码 |
| `page_size` | integer | 否 | 每页数量，最大 100 |

列表仅返回状态为已发布且启用的文章，按 `sort`、`published_at`、`id` 倒序排列，不返回 `content`。`data` 为 `{ "list": ArticleItem[], "total": integer }`。

请求示例：

```bash
curl 'https://example.com/api/plugin/news/articles?category_slug=company&page=1&page_size=20'
```

### 6.3 已发布文章详情

`GET /api/plugin/news/articles/:slug`

| Path 参数 | 类型 | 必填 | 说明 |
| --- | --- | --- | --- |
| `slug` | string | 是 | 文章稳定标识，最长 128 字符 |

只返回已发布且启用的文章。每次成功查询会在数据库事务中使用 `view_count = view_count + 1` 原子累加真实浏览量；客户端重试会再次计数，因此该读取接口的计数副作用不具备幂等性。

响应示例：

```json
{
  "code": 0,
  "msg": "success",
  "data": {
    "id": 100,
    "category_id": 12,
    "category": { "id": 12, "name": "公司新闻", "slug": "company" },
    "title": "新闻插件正式发布",
    "slug": "news-plugin-release",
    "summary": "新闻资讯插件 1.1.0 发布说明",
    "cover": "uploads/2026/09/news-cover.webp",
    "cover_url": "https://static.example.com/uploads/2026/09/news-cover.webp",
    "content": "<p>正文内容</p>",
    "view_count": 101,
    "virtual_view_count": 100,
    "total_view_count": 201,
    "published_at": "2026-09-24T18:30:00+08:00"
  }
}
```

## 7. 版本变更

### 1.1.1

- 优化管理端文章列表的封面、摘要及阅读数量展示，不涉及接口和数据库结构变更。
- 新增分类和文章时自动生成标识，创建后禁止修改稳定标识。

### 1.1.0

- 管理端文章列表新增启用状态筛选；
- 管理端文章保存接口新增 `enable_status` 与 `virtual_view_count`；
- 管理端和用户端响应新增真实、虚拟与展示浏览数量；
- 用户端列表与详情只允许访问已发布且启用的文章。

### 1.0.0

- 首次发布分类管理接口；
- 首次发布文章草稿、发布、下线和软删除接口；
- 首次发布公开分类、文章列表和文章详情接口。
